// ==============================================================================
// CursorPOS - Root Gradle Build Configuration
// ==============================================================================
// Generated: 2025-11-13 06:57:25 UTC
// Author: rjnat
// Description: Multi-module Spring Boot project configuration
// ==============================================================================

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7' apply false
    id 'io.spring.dependency-management' version '1.1.4' apply false
    id 'jacoco'
}

allprojects {
    group = 'com.cursorpos'
    version = '1.0.0'
    
    repositories {
        mavenCentral()
        maven { url 'https://repo.spring.io/milestone' }
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'
    
    java {
        sourceCompatibility = '21'
        targetCompatibility = '21'
    }
    
    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }
    
    dependencies {
        // Lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        
        // Testing
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.mockito:mockito-core'
        testImplementation 'org.mockito:mockito-junit-jupiter'
        testImplementation 'org.testcontainers:testcontainers:1.19.3'
        testImplementation 'org.testcontainers:postgresql:1.19.3'
        testImplementation 'org.testcontainers:kafka:1.19.3'
        testImplementation 'com.h2database:h2'
    }
    
    tasks.named('test') {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
            exceptionFormat "full"
        }
        finalizedBy jacocoTestReport
    }
    
    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
    }
}

// Wrapper configuration
wrapper {
    gradleVersion = '9.1.0'
    distributionType = Wrapper.DistributionType.ALL
}
